--- a/packages/design/src/Spacing.mdx
+++ b/packages/design/src/Spacing.mdx
@@ -53,12 +53,12 @@ elements.
 ### Large
 
 Use `large` spacing for higher-level "parent" containers.
-[Modal](/components/modal) uses `large` spacing in its' header and around the
+[Modal](/components/modal) uses `large` spacing in its header and around the
 edges to give itself a bit more prominence as a "standalone" view, in a similar
 manner to [Page](/components/page).
 
 `Large` can also be used to help give a "floating" element some clear separation
-from the edge of its' container, as seen in [Toast](/components/toast).
+from the edge of its container, as seen in [Toast](/components/toast).
 
 ![illustration of the large space around a Modal's header and content, a Page's outer padding, and a Toast near the bottom of a viewport](https://user-images.githubusercontent.com/39704901/143152557-8fca3292-dc07-4f9b-a33b-f4d4603c9dd2.png)
 
