update warning banner content for use case clarity

--- a/packages/components/src/Banner/Banner.mdx
+++ b/packages/components/src/Banner/Banner.mdx
@@ -112,8 +112,7 @@ workflow.
 
 <Playground>
   <Banner type="warning">
-    Editing this schedule will replace all incomplete visits with the updated
-    information for this job
+    Your subscription will be automatically upgraded in 8 days
   </Banner>
 </Playground>
 
