--- a/packages/design/src/Spacing.mdx
+++ b/packages/design/src/Spacing.mdx
@@ -15,7 +15,7 @@ Our spacing system exists to support the foundational visual design principle of
 In the shortest, simplest terms: the closer two elements are related, the
 tighter the spacing between them should be.
 
-With in mind, let’s start small and work our way up.
+With this in mind, let’s start small and work our way up.
 
 ## Design & usage guidelines
 
