change word to get netlify build to re-run

--- a/packages/design/src/Spacing.mdx
+++ b/packages/design/src/Spacing.mdx
@@ -23,7 +23,7 @@ With this in mind, let’s start small and work our way up.
 
 At their respective sizes (`1px` and `2px` equivalent), these values should
 mostly be used to provide optical adjustments where an element is visually
-off-centered.
+misaligned.
 
 ### Smaller
 
