--- a/packages/components/src/InputPhoneNumber/InputPhoneNumber.mdx
+++ b/packages/components/src/InputPhoneNumber/InputPhoneNumber.mdx
@@ -7,9 +7,13 @@ showDirectoryLink: true
 
 import { Playground, Props } from "docz";
 import { InputPhoneNumber } from ".";
+import AllowedCountries from "./InputPhoneNumber";
 import { Heading } from "../Heading";
 
 # Input Phone Number
+
+Input phone number is used in anywhere you need to accept phone numbers as
+input.
 
 ```ts
 import { InputPhoneNumber } from "@jobber/components/InputPhoneNumber";
@@ -17,122 +21,47 @@ import { Heading } from "@jobber/components/Heading";
 ```
 
 <Playground>
-  <InputPhoneNumber text="Bob" country={"NorthAmerica"} />
+  <InputPhoneNumber country={"NorthAmerica"} />
 </Playground>
 
-<!--
-  INTERFACE: This is for the proposal stage of the component
+## Design Usage & Guidelines
 
-  Provide an example of what the component looks like in code. How would you use
-  it from another React component? This should consist primarily of code blocks.
-  This section can be deleted once the component is built, when the Playground
-  will demonstrate this at a higher fidelity.
--->
+This component is best suited for when you want to ensure the user adhears to a
+specific phone number format and present that information in a friendly-easily
+consumable way.
 
 ## Props
 
 <Props of={InputPhoneNumber} />
 
-<!--
-  It is not necessary to provide an example of each prop. Use usage examples to
-  highlight key features of a component or particular considerations.
+## Country Selection
 
-  See `Button.mdx` for a good example of this.
--->
+You can select between the countries that are supported.
 
-## Countries
+<ul>
+  <li> North America </li>
+  <li> Great Britain </li>
+</ul>
 
 <Playground>
-  <InputPhoneNumber
-    text="Bob"
-    country={"GreatBritain"}
-    showCountryCode={true}
-  />
+  <InputPhoneNumber country={"GreatBritain"} showCountryCode={true} />
 </Playground>
 
 ## Always Show Mask
 
+By default the option is set to true. However, you may not want the mask to
+apear until a user begins to interact with the input, in which case you would
+set this value to false.
+
 <Playground>
-  <InputPhoneNumber
-    text="Bob"
-    country={"NorthAmerica"}
-    alwaysShowMask={false}
-  />
+  <InputPhoneNumber country={"NorthAmerica"} alwaysShowMask={false} />
 </Playground>
 
 ## Show Country Code
 
+This switch just hides or shows the country code that precedes the rest of the
+input. By default this value is set to false.
+
 <Playground>
-  <InputPhoneNumber
-    text="Bob"
-    country={"NorthAmerica"}
-    showCountryCode={true}
-  />
+  <InputPhoneNumber country={"NorthAmerica"} showCountryCode={true} />
 </Playground>
-
-## Usage Guidelines
-
-The `<InputPhoneNumber>` will... _Add a brief description of the component_
-
-<!--
-  What is the design purpose of this component? How do its responsibilities
-  relate to other components? What should this component not be used for? What
-  are some related components in Atlantis? Try to describe this component not
-  in terms of what it looks like or what elements make it up, but what function
-  it performs or how it enables a user to perform tasks (e.g. “Buttons allow users
-  to initiate, complete, and reverse actions.” vs “Buttons are rectangular elements
-  that have a green background and white text”).
--->
-
-## Content Guidelines
-
-<!--
-  What type of content does this component present (documents, text, images, other components)?
-  What is the recommended, or expected, amount of content? What is the components’ behaviour when
-  the provided content diverges from what is expected (image aspect ratio, amount of text, video
-  vs audio, filesize)? Are there any important references to the [Product Vocabulary](https://atlantis.getjobber.com/guides/product-vocabulary)
-  that should be made regarding this component? What happens when content is unavailable or unreliable
-  (poor connection, empty states, flaky GPS data?)
--->
-
-## Accessibility
-
-<!--
-  Describe the accessibility concerns for the component. How does it handle touch vs cursor vs
-  keyboard events? Should it capture input? What should a screen reader see when it's focuse?
--->
-
-## Responsiveness
-
-<!--
-  How should the component behave on an iPhone 8? An iPad? A 1920x1080 monitor? How does the
-  component appear when the component itself is less than 375px wide? Less than 640px wide?
-  Less than 1200px wide? Greater than 1200px? Does it change when the device DPI is higher
-  or lower?
--->
-
-## Mockup
-
-<iframe
-  style="border: 1px solid rgba(0, 0, 0, 0.1);"
-  width="800"
-  height="450"
-  src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2F3BXCXXD9glMtj8RAHjXiQC%2FDesign-System-Contribution-TEMPLATE%3Fnode-id%3D332%253A5526"
-  allowfullscreen
-></iframe>
-
-<!--
-  Insert a Figma mockup from the [Design System Contribution template](https://www.figma.com/file/3BXCXXD9glMtj8RAHjXiQC/Design-System-Contribution-TEMPLATE?node-id=26%3A2)
-  that conveys the visual design of the component, with variants and state accounted for.
-  Consider progressive enhancement; might this rely on newer browser features that aren’t
-  widely supported yet?
--->
-
-## Notes
-
-<!--
-  What decisions worth remembering have gone into this component? Did we consider any potentially valuable
-  functionality that we’re not implementing right now for scope purposes? Are there any design decisions
-  that might need explaining beyond the usage guidelines? This will help consumers understand this component
-  more fully.
--->
