add more detail to datepicker usage

--- a/packages/components/src/DatePicker/DatePicker.mdx
+++ b/packages/components/src/DatePicker/DatePicker.mdx
@@ -46,6 +46,9 @@ import { DatePicker } from "@jobber/components/DatePicker";
 Use Datepicker when you are looking to provide the user with a highly visual
 interface for intuitive date selections.
 
+A classic use case for a standalone Datepicker would be as a means to navigate
+a more content-heavy calendar interface.
+
 It may be beneficial to supplement the Datepicker with alternate means of
 entering their date selection, such as providing a `date` input.
 
