--- a/packages/components/src/InputPhoneNumber/InputPhoneNumber.mdx
+++ b/packages/components/src/InputPhoneNumber/InputPhoneNumber.mdx
@@ -12,7 +12,7 @@ import { Heading } from "../Heading";
 
 # Input Phone Number
 
-Input phone number is used in anywhere you need to accept phone numbers as
+Input phone number should be used anywhere you need to accept phone numbers as
 input.
 
 ```ts
