better words thanks Agnes
Co-authored-by: Agnes Czegus <czegus@gmail.com>

--- a/packages/components/src/Banner/Banner.mdx
+++ b/packages/components/src/Banner/Banner.mdx
@@ -111,7 +111,7 @@ begin with "Warning:" and should not be used as a way to block or redirect a
 workflow.
 
 You should use [ConfirmationModal](/components/confirmation-modal) when you need to
-get explicit confirmation from the user before they complete an action.
+get explicit confirmation from the user before they complete an action that is difficult to reverse.
 
 <Playground>
   <Banner type="warning">
