clarify and use less fluffy words before "calendar"
Co-authored-by: Agnes Czegus <czegus@gmail.com>

--- a/packages/components/src/DatePicker/DatePicker.mdx
+++ b/packages/components/src/DatePicker/DatePicker.mdx
@@ -47,7 +47,7 @@ Use Datepicker when you are looking to provide the user with a highly visual
 interface for intuitive date selections.
 
 A classic use case for a standalone Datepicker would be as a means to navigate
-a more content-heavy calendar interface.
+within a larger calendar interface.
 
 It may be beneficial to supplement the Datepicker with alternate means of
 entering their date selection, such as providing a `date` input.
