--- a/packages/components/src/DatePicker/DatePicker.mdx
+++ b/packages/components/src/DatePicker/DatePicker.mdx
@@ -46,6 +46,9 @@ import { DatePicker } from "@jobber/components/DatePicker";
 Use Datepicker when you are looking to provide the user with a highly visual
 interface for intuitive date selections.
 
+A classic use case for a standalone Datepicker would be as a means to navigate
+within a larger calendar interface.
+
 It may be beneficial to supplement the Datepicker with alternate means of
 entering their date selection, such as providing a `date` input.
 
@@ -116,7 +119,7 @@ If using a custom activator, ensure that the activator is keyboard-operable.
 ## Related Components
 
 - If you are looking to use the `DatePicker` in a `Form`, consider the
-  [InputDate](#) component.
+  [InputDate](/components/input-date) component.
 - For a time input, use [InputTime](/components/input-time)
 - To present dates that have already been selected in a consistent format, use
   [FormatDate](/components/date-formatter)
@@ -125,5 +128,4 @@ If using a custom activator, ensure that the activator is keyboard-operable.
 
 ## Notes
 
-> InputDate is not currently available, but is in development and should be
-> ready for use in the near future.
+As mentioned above, the Datepicker wraps [React DatePicker](https://reactdatepicker.com/).
