--- a/packages/design/src/Borders.mdx
+++ b/packages/design/src/Borders.mdx
@@ -32,11 +32,12 @@ export function Example({ of: size }) {
   return <div style={style} />;
 }
 
-| Width              | Visual                   |
-| :----------------- | :----------------------- |
-| `--border-base`    | <Example of="base" />    |
-| `--border-thick`   | <Example of="thick" />   |
-| `--border-thicker` | <Example of="thicker" /> |
+| Width               | Visual                    |
+| :------------------ | :------------------------ |
+| `--border-base`     | <Example of="base" />     |
+| `--border-thick`    | <Example of="thick" />    |
+| `--border-thicker`  | <Example of="thicker" />  |
+| `--border-thickest` | <Example of="thickest" /> |
 
 The `base` border width should be used for most use cases (see
 [`Card`](https://atlantis.getjobber.com/components/card) and
