updated snaps and divider docs

--- a/packages/components/src/Divider/Divider.mdx
+++ b/packages/components/src/Divider/Divider.mdx
@@ -40,7 +40,7 @@ should be used within a [`Content`](/components/content) component.
 
 <Props of={Divider} />
 
-## Usage
+## Design & Usage Guidelines
 
 ### Size
 
@@ -88,3 +88,8 @@ Use a vertical divider when the content to be divided runs horizontally.
     </Card>
   </div>
 </Playground>
+
+## Related Components
+
+- To segment different groups of content, use [Card.](/components/card)
+- For guidance on borders in general, see our [Borders guide.](/borders)
